updated with label and changed contrast issues

--- a/styles.css
+++ b/styles.css
@@ -194,7 +194,7 @@ h2 {
 .chips {
   background-color: #ebebff;
   padding: 10px;
-  color: #4472e7;
+  color: #384af5;
   border-radius: 10px;
   font-weight: bold;
   font-family: Poppins, sans-serif;
